@@ -1,21 +1,15 @@
 <?php
 
 /**
- * Helper class for segmenting large cache values without relying on serializing classes
+ * Helper class for segmenting large cache values without relying
+ * on serializing classes.
  *
  * @since 1.34
  */
 class SerializedValueContainer {
 	private const SCHEMA = '__svc_schema__';
 	// 64 bit UID
-	private const SCHEMA_UNIFIED = 'DAAIDgoKAQw';
-	// 64 bit UID
 	private const SCHEMA_SEGMENTED = 'CAYCDAgCDw4';
-
-	/**
-	 * @deprecated since 1.42
-	 */
-	public const UNIFIED_DATA = '__data__';
 	public const SEGMENTED_HASHES = '__hashes__';
 
 	/**
@@ -30,23 +24,10 @@ class SerializedValueContainer {
 	}
 
 	/**
-	 * @deprecated since 1.42.
 	 * @param mixed $value
 	 * @return bool
 	 */
-	public static function isUnified( $value ) {
-		wfDeprecated( __METHOD__, '1.42' );
-		return (
-			$value instanceof stdClass &&
-			( $value->{self::SCHEMA} ?? null ) === self::SCHEMA_UNIFIED
-		);
-	}
-
-	/**
-	 * @param mixed $value
-	 * @return bool
-	 */
-	public static function isSegmented( $value ) {
+	public static function isSegmented( $value ): bool {
 		return (
 			$value instanceof stdClass &&
 			( $value->{self::SCHEMA} ?? null ) === self::SCHEMA_SEGMENTED
