@@ -107,6 +107,8 @@ because of Phabricator reports.
 * UserGroupMembership::getGroupName(), deprecated in 1.38, and
   UserGroupMembership::getGroupMemberName(), deprecated in 1.40, have
   been removed.
+* SerializedValueContainer::isUnified(), deprecated in 1.42, has been
+  removed.
 * Parser::getFreshParser(), deprecated in 1.39, has been removed.
 * ConfigFactory::getDefaultInstance(), deprecated since 1.27, has been
   removed.
